First commited as before_39340_rev10