@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2014 IBM Corporation and others.
+ * Copyright (c) 2003, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,8 +7,10 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug https://bugs.eclipse.org/436247
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136
+ *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug 436247
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136, 472654
+ *     Robert Roth <robert.roth.off@gmail.com> - Bugs 274005, 456291
+ *     Mickael Istria (Red Hat Inc.) - Theme and fontregistry rather than pref
  *******************************************************************************/
 package org.eclipse.ui.internal.themes;
 
@@ -137,9 +139,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private IThemeRegistry registry;
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#getChildren(java.lang.Object)
-         */
         @Override
 		public Object[] getChildren(Object parentElement) {
             if (parentElement instanceof ThemeElementCategory) {
@@ -258,9 +257,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#getParent(java.lang.Object)
-         */
         @Override
 		public Object getParent(Object element) {
 			if (element instanceof ThemeElementCategory)
@@ -291,9 +287,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return null;
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#hasChildren(java.lang.Object)
-         */
         @Override
 		public boolean hasChildren(Object element) {
             if (element instanceof ThemeElementCategory) {
@@ -323,11 +316,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
-        /*
-		 * (non-Javadoc)
-		 *
-		 * @see org.eclipse.jface.viewers.IStructuredContentProvider#getElements(java.lang.Object)
-		 */
         @Override
 		public Object[] getElements(Object inputElement) {
             ArrayList list = new ArrayList();
@@ -340,24 +328,21 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                     Set bindings = themeRegistry
                             .getPresentationsBindingsFor(categories[i]);
 					if (bindings == null) {
-						list.add(categories[i]);
+						Object[] children = getChildren(categories[i]);
+						if (children != null && children.length > 0) {
+							list.add(categories[i]);
+						}
 					}
                 }
             }
             return list.toArray(new Object[list.size()]);
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IContentProvider#dispose()
-         */
         @Override
 		public void dispose() {
             categoryMap.clear();
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer, java.lang.Object, java.lang.Object)
-         */
         @Override
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
             categoryMap.clear();
@@ -406,9 +391,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             fontRegistry.addListener(listener);
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IBaseLabelProvider#dispose()
-         */
         @Override
 		public void dispose() {
             super.dispose();
@@ -447,9 +429,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                     PresentationLabelProvider.this));
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IFontProvider#getFont(java.lang.Object)
-         */
         @Override
 		public Font getFont(Object element) {
             Display display = tree.getDisplay();
@@ -473,9 +452,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return JFaceResources.getDialogFont();
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ILabelProvider#getImage(java.lang.Object)
-         */
         @Override
 		public Image getImage(Object element) {
             if (element instanceof ColorDefinition) {
@@ -529,9 +505,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ILabelProvider#getText(java.lang.Object)
-         */
         @Override
 		public String getText(Object element) {
             if (element instanceof IHierarchalThemeElementDefinition) {
@@ -546,8 +519,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
                     if (!ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
                     	if (isDefault(themeElement))
-							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
-               			return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
+							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), themeElement.getName(), def.getName() ); //$NON-NLS-1$
+               			return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), themeElement.getName(), def.getName() ); //$NON-NLS-1$
                     }
                 }
             }
@@ -597,13 +570,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return null;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 *
-		 * @see
-		 * org.eclipse.jface.viewers.IColorProvider#getBackground(java.lang.
-		 * Object)
-		 */
 		@Override
 		public Color getBackground(Object element) {
 			return null;
@@ -628,7 +594,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * made by the user. These changes need to be stored into the preference
 	 * store.
 	 */
-	private Map<ColorDefinition, RGB> colorPreferencesToSet = new HashMap<ColorDefinition, RGB>(7);
+	private Map<ColorDefinition, RGB> colorPreferencesToSet = new HashMap<>(7);
 
     private CascadingColorRegistry colorRegistry;
 
@@ -694,11 +660,18 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	private Button goToDefaultButton;
 
 	/**
+	 * The button to expand the tree.
+	 *
+	 * @since 4.5
+	 */
+	private Button expandAllButton;
+
+	/**
 	 * Map of definition FontDefinition->FontData[] capturing the changes
 	 * explicitly made by the user. These changes need to be stored into the
 	 * preference store.
 	 */
-	private Map<FontDefinition, FontData[]> fontPreferencesToSet = new HashMap<FontDefinition, FontData[]>(
+	private Map<FontDefinition, FontData[]> fontPreferencesToSet = new HashMap<>(
 			7);
 
     private CascadingFontRegistry fontRegistry;
@@ -710,7 +683,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Map of definition id->FontData[] capturing the temporary changes caused
 	 * by a 'defaultsTo' font change.
+	 *
+	 * @deprecated in this page, we should only care about preferences,
+	 *             preference to fontValues synchronization in registry is
+	 *             handled in the ThemeAPI and listeners
 	 */
+	@Deprecated
     private Map fontValuesToSet = new HashMap(7);
 
     /**
@@ -891,9 +869,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		return separator;
 	}
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.PreferencePage#createContents(org.eclipse.swt.widgets.Composite)
-     */
     @Override
 	protected Control createContents(Composite parent) {
     	PlatformUI.getWorkbench().getHelpSystem().setHelp(parent, IWorkbenchHelpContextIds.FONTS_PREFERENCE_PAGE);
@@ -948,6 +923,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		createSeparator(controlColumn);
 		editDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("editDefault")); //$NON-NLS-1$
 		goToDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("goToDefault")); //$NON-NLS-1$
+		createSeparator(controlColumn);
+		expandAllButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("expandAll")); //$NON-NLS-1$
+		expandAllButton.setEnabled(true);
         // --- end of buttons
 
 		createDescriptionControl(mainColumn);
@@ -1009,15 +987,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		// non-category elements to be returned in the event that their children
 		// do not and also search the descriptions.
 		PatternFilter filter = new PatternFilter() {
-			/*
-			 * (non-Javadoc)
-			 *
-			 * @see
-			 * org.eclipse.ui.dialogs.PatternFilter#isLeafMatch(org.eclipse.
-			 * jface.viewers.Viewer, java.lang.Object)
-			 *
-			 * @since 3.7
-			 */
 			@Override
 			protected boolean isLeafMatch(Viewer viewer, Object element) {
 				if (super.isLeafMatch(viewer, element))
@@ -1082,9 +1051,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		restoreTreeSelection();
 	}
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.dialogs.IDialogPage#dispose()
-     */
     @Override
 	public void dispose() {
 		eventBroker.unsubscribe(themeRegistryRestyledHandler);
@@ -1345,11 +1311,15 @@ getPreferenceStore(),
 			}
 		});
 
+		expandAllButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent event) {
+				tree.getViewer().expandAll();
+			}
+		});
+
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.IWorkbenchPreferencePage#init(org.eclipse.ui.IWorkbench)
-     */
     @Override
 	public void init(IWorkbench aWorkbench) {
         this.workbench = (Workbench) aWorkbench;
@@ -1568,11 +1538,8 @@ getPreferenceStore(),
 		return ThemeElementHelper.createPreferenceKey(currentTheme, definition.getId());
 	}
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.PreferencePage#performDefaults()
-     */
     @Override
-	protected void performDefaults() {
+	public void performDefaults() {
         performColorDefaults();
         performFontDefaults();
 		updateControls();
@@ -1608,9 +1575,6 @@ getPreferenceStore(),
         return true;
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.IPreferencePage#performOk()
-     */
     @Override
 	public boolean performOk() {
     	saveTreeExpansion();
@@ -1707,21 +1671,19 @@ getPreferenceStore(),
         }
     }
 
-    private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas) {
+	private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas, boolean reset) {
         FontDefinition[] children = getDescendantFonts(definition);
-
         for (int i = 0; i < children.length; i++) {
             if (isDefault(children[i])) {
-                setDescendantRegistryValues(children[i], datas);
-                setRegistryValue(children[i], datas);
-                fontValuesToSet.put(children[i].getId(), datas);
-				fontPreferencesToSet.remove(children[i]);
+				setFontPreferenceValue(children[i], datas, reset);
             }
         }
     }
 
 	protected void setFontPreferenceValue(FontDefinition definition, FontData[] datas, boolean reset) {
-        setDescendantRegistryValues(definition, datas);
+		// descendant values must be computed and set before updating current,
+		// or isDefault will miss them
+		setDescendantRegistryValues(definition, datas, reset);
 		fontPreferencesToSet.put(definition, datas);
 		setRegistryValue(definition, datas);
 		updateDefinitionState(definition, reset);
@@ -2160,7 +2122,9 @@ getPreferenceStore(),
 		String fontColorString = RESOURCE_BUNDLE.getString("fontColorString"); //$NON-NLS-1$
 		RGB rgb = currentColor.getRGB();
 		String messageBottom = MessageFormat
-				.format(fontColorString, new Object[] { new Integer(rgb.red), new Integer(rgb.green), new Integer(rgb.blue) });
+				.format(fontColorString,
+						new Object[] { Integer.valueOf(rgb.red), Integer.valueOf(rgb.green),
+								Integer.valueOf(rgb.blue) });
 
 		// calculate position of the vertical line
 		int separator = (clientArea.width - 2) / 3;
@@ -2254,9 +2218,12 @@ getPreferenceStore(),
 
 	private boolean isAvailableInCurrentTheme(ThemeElementDefinition definition) {
 		if (definition instanceof ColorDefinition) {
-			RGB value = ((ColorDefinition) definition).getValue();
-			return value != null && value != EMPTY_COLOR_VALUE
-					&& colorRegistry.get(definition.getId()) != null;
+			ColorDefinition colorDef = (ColorDefinition) definition;
+			RGB value = colorDef.getValue();
+			if ((value == null || value == EMPTY_COLOR_VALUE) && colorDef.getDefaultsTo() == null) {
+				return false;
+			}
+			return colorRegistry.get(definition.getId()) != null;
 		}
 		return true;
 	}
